src/objects/Submission_Error__c.object
<CustomObject>
    <description>Error Summary for Google TA acceptance process. This is also linked to any Google Waived Errors and helps to view which errors exist with which device submissions to Google for review.</description>
    <fields>
        <fullName>Android_Submission__c</fullName>
        <label>Android Submission</label>
        <referenceTo>Android_Submission__c</referenceTo>
        <relationshipLabel>Submission Errors</relationshipLabel>
        <relationshipName>Submission_Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Waived_Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Google Waived Error</label>
        <referenceTo>Google_Waived_Error__c</referenceTo>
        <relationshipLabel>Submission Errors</relationshipLabel>
        <relationshipName>Submission_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_by_other_file__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed by other file?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waived__c</fullName>
        <formula>Google_Waived_Error__r.Waived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waived?</label>
        <type>Checkbox</type>
    </fields>
    <label>Submission Error</label>
    <nameField>
        <label>Submission Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Errors</pluralLabel>
    <recordTypes>
        <fullName>Fail</fullName>
        <active>true</active>
        <label>Fail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pass</fullName>
        <active>true</active>
        <label>Pass</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>